WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276952
[GTK][WPE] Error while creating the vblank monitor
https://bugs.webkit.org/show_bug.cgi?id=276952
Summary
[GTK][WPE] Error while creating the vblank monitor
Pawel Lampe
Reported
2024-07-23 05:35:02 PDT
The error: "Could not create a vblank monitor for display 19: no CRTC found" the above may or may not happen depending on the order of drm device detection
Attachments
Add attachment
proposed patch, testcase, etc.
Pawel Lampe
Comment 1
2024-07-23 06:16:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31114
EWS
Comment 2
2024-07-24 06:22:44 PDT
Committed
281290@main
(6036e80ef978): <
https://commits.webkit.org/281290@main
> Reviewed commits have been landed. Closing PR #31114 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug