[GTK][WPE] Error while creating the vblank monitor https://bugs.webkit.org/show_bug.cgi?id=276952

Reviewed by Carlos Garcia Campos.

This PR changes DisplayVBlankMonitorDRM::create() in a way that drm node with crtc
is being seeked instead of just looking for crtc based on custom drm node.

* Source/WebKit/UIProcess/glib/DisplayVBlankMonitorDRM.cpp:
(WebKit::findDrmNodeWithCrtc):
(WebKit::DisplayVBlankMonitorDRM::create):

Canonical link: https://commits.webkit.org/281290@main